crates/plotnik-tests/tests/04-emit/types/captures/outer_omission_does_not_legalize_inner_bool.txt
Q = (program
  [
    {
      (identifier) @flag :: bool
    } @row
    (number)
  ]
)
------------------ DIAGNOSTICS -------------------
error: capture type `bool` requires a value that may be absent. This capture is always present
 --> query.ptk:4:26
  |
4 |       (identifier) @flag :: bool
  |                          ^^^^^^^
